Changelog
=========

2022-05-29
- Fix non-crit damage calculation when applying imperil

2022-05-21
- Add shield listing and add shield mod effects
- Fix mob page to show shields in the wielded items list
- Make some page variables persist in the session
- Add imperil spellcasting effects

2022-05-20
- Add new weapon comparison page

2022-04-25
- Fix incorrect damage reduction averages when there is an offense-only body part (like olthoi breath)
- Fix incorrect html tag for empty mob drop items list
- Fix incorrect weenie type reported by crafting items
- Report boost per burden unit for certain crafted items
- Protect against infinite loop

2022-03-16
- Fix "name" notice in mob search field
- Fix redirect behavior when one crafting or creature item is found

2022-03-14
- Add new crafting page!
- Updated ace_world to v0.9.246

2021-03-20
- Add Creature XP

2021-03-03
 - Updated physical armor table with effective damage reduction
 - Updated formula to include actual ArmorMod equation from ACE
 - Added average damage reduction

2021-03-02
 - Added special properties like IgnoreShield/IgnoreMagicResist/IgnoreMagicArmor

2021-02-24
 - Added effective drain resistances

2021-02-11
 - Added cow weenie types to lookup
 - Added more skill formulas
 - Look and feel improvements for mobile
 
2021-02-09
 - Added wielded treasure items
 - Added body part damage
 - Added spell book
 
2021-02-04
 - Add color coding to Effective AL table
 - Add magic resistances table
 - Redirect to mob page from lookup page if there is single result
 
2021-01-24
 - Initial release